Added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@ helikopter_quarc_windows/
 *.toc
 
 *.toc
+
+report/TSWLatexianTemp_lab_report.tex
+
+report/TSWLatexianTemp_000046.tex
+
+report/TSWLatexianTemp_000046.pdf
+
+report/lab_report.toc
